--- a/index.html
+++ b/index.html
@@ -550,8 +550,8 @@
                     <ul>
                         Specs for file submission:
                         <li>
-                            General naming convention: "FirstnameLastname_ProjectName_ProjectNumber". So, an
-                            example file name would look like: “SiriLee<wbr>_ButterflyPoster<wbr>_1.tif”, "SiriLee<wbr>_ButterFont<wbr>.otf", or "SiriLee<wbr>_Typespecimen.pdf".
+                            General naming convention: “FirstnameLastname_ProjectName_ProjectNumber”. So, an
+                            example file name would look like: “SiriLee<wbr>_ButterflyPoster<wbr>_1.tif”, “SiriLee<wbr>_ButterFont<wbr>.otf”, or “SiriLee<wbr>_Typespecimen.pdf”.
                         </li>
                         <li>
                             For Photoshop files: Save them as a tiff (file → save as → choose “tiff” under format → click ok for
