--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                     <li><a href="https://drive.google.com/file/d/1DiVCRu734nbhwZhOzpMZx3f5ytr8psps/view?usp=sharing">Introduction to Graphic Design</a></li>
                     <li><a href="https://drive.google.com/file/d/1E_eBOxc-VrGtHHyauApiK57uKTkAxgtf/view?usp=sharing">References for Posters</a></li>
                     <li><a href="https://drive.google.com/file/d/1fZSB1R7e5RLqU1VTLrapgiVx6fegUuxy/view?usp=sharing">References for Type Design</a></li>
+                    <li><a href="https://drive.google.com/file/d/11cCwTSsfjQG_S-N6CfJT_5zMrMghdtCp/view?usp=sharing">References for Publication Design</a></li>
                 </ul>
             </p>
         </section>
